7459-introducing new job into the build to run these tests seperately

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -65,7 +65,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -ExcludeProjects Dev2.Integration.Tests,Dev2.Studio.Core.Tests,Dev2.RunTime.Tests,Dev2.Infrastructure.Tests,Warewolf.UI.Tests,Warewolf.Logger.Tests,Warewolf.Studio.ViewModels.Tests,Warewolf.Web.UI.Tests,Warewolf.Storage.Tests,Warewolf.Auditing.Tests,Dev2.Activities.Tests,Dev2.Activities.Designers.Tests -ExcludeCategories CannotParallelize,ResourceCatalog_LoadTests,PluginRuntimeHandler,GatherSystemInformation,LocalSchedulerAdmin,Multithread,AnonymousRedis -UseRegionalSettings
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -ExcludeProjects Dev2.Integration.Tests,Dev2.Studio.Core.Tests,Dev2.RunTime.Tests,Dev2.Infrastructure.Tests,Warewolf.UI.Tests,Warewolf.Logger.Tests,Warewolf.Studio.ViewModels.Tests,Warewolf.Web.UI.Tests,Warewolf.Storage.Tests,Warewolf.Auditing.Tests,Dev2.Activities.Tests,Dev2.Activities.Designers.Tests -ExcludeCategories CannotParallelize,ResourceCatalog_LoadTests,PluginRuntimeHandler,GatherSystemInformation,LocalSchedulerAdmin,Multithread,AnonymousRedis,COMIPCSaxonCSandStudioTests -UseRegionalSettings
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -428,7 +428,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Tools.Specs -ExcludeCategories Recordset,FileMoveFromFTP,ZipFromFTPS,UnzipFromLocal,UnzipFromFTPS,CopyFileFromFTP,SqlBulkInsert,FileAndFolderDelete,CopyFileFromSFTP,FileMoveFromFTPS,WriteFile,FileRenameFromLocal,Storage,FileRenameFromFTPS,ReadFolder,FileAndFolderCreate,ControlFlow,FileRenameFromFTP,FileMoveFromUNC,CopyFileFromFTPS,Scripting,Zip,ZipFromLocal,CopyFileFromUNC,FileAndFolderRename,UnzipFromFTP,FileAndFolderMove,FileMoveFromLocal,Resources,CopyFileFromLocal,DatabaseTimeout,Database,UnzipValidation,Email,ZipFromSFTP,FileRenameFromUNC,UnzipFromSFTP,FileAndFolderCopy,LoopConstructs,ZipFromFTP,NewReadFolder,FileMoveFromSFTP,Data,ReadFile,FileRenameFromSFTP,Utility,AnonymousRedis
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Tools.Specs -ExcludeCategories Recordset,FileMoveFromFTP,ZipFromFTPS,UnzipFromLocal,UnzipFromFTPS,CopyFileFromFTP,SqlBulkInsert,FileAndFolderDelete,CopyFileFromSFTP,FileMoveFromFTPS,WriteFile,FileRenameFromLocal,Storage,FileRenameFromFTPS,ReadFolder,FileAndFolderCreate,ControlFlow,FileRenameFromFTP,FileMoveFromUNC,CopyFileFromFTPS,Scripting,Zip,ZipFromLocal,CopyFileFromUNC,FileAndFolderRename,UnzipFromFTP,FileAndFolderMove,FileMoveFromLocal,Resources,CopyFileFromLocal,DatabaseTimeout,Database,UnzipValidation,Email,ZipFromSFTP,FileRenameFromUNC,UnzipFromSFTP,FileAndFolderCopy,LoopConstructs,ZipFromFTP,NewReadFolder,FileMoveFromSFTP,Data,ReadFile,FileRenameFromSFTP,Utility,AnonymousRedis,COMIPCSaxonCSandStudioTests
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -720,7 +720,7 @@ stages:
         docker login --username ashley.lewis@theunlimited.co.za --password %GetVSTestContainer% registry.gitlab.com/warewolf/vstest
         mkdir "$(Agent.BuildDirectory)\TestResults"
         echo Set-Location C:\BuildUnderTest>"$(Agent.BuildDirectory)\TestResults\RunTestsEntrypoint.ps1"
-        echo ^&".\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Studio.ViewModels.Tests -ExcludeCategories ElasticsearchSourceViewModel,RequestServiceNameViewModel,ElasticsearchSourceViewModel_Constructor,ElasticsearchSourceViewModel_TestOkCommand,ElasticsearchSourceViewModel_TestName,ElasticsearchSourceViewModel_RequestServiceNameViewModel,ElasticsearchSourceViewModel_TestResourceName,ElasticsearchSourceViewModel_TestHostName,ElasticsearchSourceViewModel_TestPort,ElasticsearchSourceViewModel_TestUsername,ElasticsearchSourceViewModel_TestPassword,ElasticsearchSourceViewModel_TestAuthenticationType,ElasticsearchSourceViewModel_Test,ElasticsearchSourceViewModel_TestHeaderText,ElasticsearchSourceViewModel_TestModelItem,ElasticsearchSourceViewModel_TestSaveSource,ElasticsearchSourceViewModel_TestSave,ElasticsearchSourceViewModel_TestUpdateHelpDescriptor,ElasticsearchSourceViewModel_TestCanSave,ElasticsearchSourceViewModel_CanTest>>"$(Agent.BuildDirectory)\TestResults\RunTestsEntrypoint.ps1"
+        echo ^&".\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Studio.ViewModels.Tests -ExcludeCategories ElasticsearchSourceViewModel,RequestServiceNameViewModel,ElasticsearchSourceViewModel_Constructor,ElasticsearchSourceViewModel_TestOkCommand,ElasticsearchSourceViewModel_TestName,ElasticsearchSourceViewModel_RequestServiceNameViewModel,ElasticsearchSourceViewModel_TestResourceName,ElasticsearchSourceViewModel_TestHostName,ElasticsearchSourceViewModel_TestPort,ElasticsearchSourceViewModel_TestUsername,ElasticsearchSourceViewModel_TestPassword,ElasticsearchSourceViewModel_TestAuthenticationType,ElasticsearchSourceViewModel_Test,ElasticsearchSourceViewModel_TestHeaderText,ElasticsearchSourceViewModel_TestModelItem,ElasticsearchSourceViewModel_TestSaveSource,ElasticsearchSourceViewModel_TestSave,ElasticsearchSourceViewModel_TestUpdateHelpDescriptor,ElasticsearchSourceViewModel_TestCanSave,ElasticsearchSourceViewModel_CanTest,COMIPCSaxonCSandStudioTests>>"$(Agent.BuildDirectory)\TestResults\RunTestsEntrypoint.ps1"
         docker run -i --rm --memory 4g -v "$(Agent.BuildDirectory)\TestResults:C:\BuildUnderTest\TestResults" registry.gitlab.com/warewolf/vstest:$(Build.SourceVersion) powershell -File C:\BuildUnderTest\TestResults\RunTestsEntrypoint.ps1
       displayName: 'Run Tests'
       env:
@@ -1129,7 +1129,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Integration.Tests -ExcludeCategories "Load Tests","Server Startup",AnonymousRedis -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Integration.Tests -ExcludeCategories "Load Tests","Server Startup",AnonymousRedis,COMIPCSaxonCSandStudioTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
 
     - task: PublishBuildArtifacts@1
@@ -1220,7 +1220,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -ExcludeCategories ExampleWorkflowExecution,DateTimeExampleWorkflowExecution,RemoteServer,StudioTestFrameworkWithScriptingTools,StudioTestFrameworkWithHelloWorldWorkflow,StudioTestFrameworkWithHTTPWebPostTools,StudioTestFrameworkWithHTTPWebGetTools,StudioTestFrameworkWithHTTPWebDeleteTools,MSSql,DatabaseWorkflowExecution,ExecuteInBrowser,StudioTestFrameworkWithUtilityTools,StudioTestFrameworkWithSharepointTools,SubworkflowOracleExecution,RabbitMQWorkflowExecution,WorkflowMerging,StudioTestFrameworkWithFileAndFolderTools,DatabaseSubworkflowExecution,StudioTestFrameworkWithDatabaseTools,StudioTestFrameworkWithSubworkflow,Scheduler,StudioTestFrameworkWithHTTPWebPutTools,StudioTestFrameworkWithDropboxTools,SubworkflowExecution,StudioTestFrameworkWithDataTools,StudioTestFrameworkWithDeletedResources,StudioTestFrameworkWithRabbitMQTools,WorkflowExecution,StudioTestFramework,NestedForEachExecution,WarewolfSearch,AssignWorkflowExecution,WorkflowExecutionLogging,StudioTestFrameworkWithHTTPWebTools,CompositionLoadTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -ExcludeCategories ExampleWorkflowExecution,DateTimeExampleWorkflowExecution,RemoteServer,StudioTestFrameworkWithScriptingTools,StudioTestFrameworkWithHelloWorldWorkflow,StudioTestFrameworkWithHTTPWebPostTools,StudioTestFrameworkWithHTTPWebGetTools,StudioTestFrameworkWithHTTPWebDeleteTools,MSSql,DatabaseWorkflowExecution,ExecuteInBrowser,StudioTestFrameworkWithUtilityTools,StudioTestFrameworkWithSharepointTools,SubworkflowOracleExecution,RabbitMQWorkflowExecution,WorkflowMerging,StudioTestFrameworkWithFileAndFolderTools,DatabaseSubworkflowExecution,StudioTestFrameworkWithDatabaseTools,StudioTestFrameworkWithSubworkflow,Scheduler,StudioTestFrameworkWithHTTPWebPutTools,StudioTestFrameworkWithDropboxTools,SubworkflowExecution,StudioTestFrameworkWithDataTools,StudioTestFrameworkWithDeletedResources,StudioTestFrameworkWithRabbitMQTools,WorkflowExecution,StudioTestFramework,NestedForEachExecution,WarewolfSearch,AssignWorkflowExecution,WorkflowExecutionLogging,StudioTestFrameworkWithHTTPWebTools,CompositionLoadTests,COMIPCSaxonCSandStudioTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
 
     - task: PublishBuildArtifacts@1
@@ -1477,7 +1477,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Specs,Warewolf.*.Specs -ExcludeProjects Dev2.Activities.Specs,Warewolf.Tools.Specs,Warewolf.UI.Specs,Warewolf.UI.Load.Specs -ExcludeCategories NoConflictingPermissionsSecurity,ResourcePermissionsSecurity,ConflictingViewExecutePermissionsSecurity,ConflictingExecutePermissionsSecurity,ConflictingViewPermissionsSecurity,OverlappingUserGroupsPermissionsSecurity,ServerPermissionsSecurity,ConflictingContributeViewExecutePermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Specs,Warewolf.*.Specs -ExcludeProjects Dev2.Activities.Specs,Warewolf.Tools.Specs,Warewolf.UI.Specs,Warewolf.UI.Load.Specs -ExcludeCategories NoConflictingPermissionsSecurity,ResourcePermissionsSecurity,ConflictingViewExecutePermissionsSecurity,ConflictingExecutePermissionsSecurity,ConflictingViewPermissionsSecurity,OverlappingUserGroupsPermissionsSecurity,ServerPermissionsSecurity,ConflictingContributeViewExecutePermissionsSecurity,COMIPCSaxonCSandStudioTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
 
     - task: PublishBuildArtifacts@1
@@ -2237,7 +2237,7 @@ stages:
         "@ | Out-File -LiteralPath "$env:localappdata\Warewolf\Studio\Settings.config" -Encoding utf8 -Force
         }
         Set-Location "$(Agent.BuildDirectory)"
-        &"$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Studio.Core.Tests -ExcludeCategories "Intellisense Textbox Visual Tree","Studio Settings Core",SettingsViewModel_SaveCommand,SettingsViewModel_IsDirty,LogSettingsViewModel_Constructor,SettingsViewModel_OnDeactivate,SettingsViewModel_ReturnsFalse,SettingsViewModel_DoDeactivate,LogSettingsViewModel_ServerLogLevel,LogSettingsViewModel_UpdateHelp,LogSettingsViewModel_SelectedLoggingType,LogSettingsViewModel_GetLogFileCommand,LogSettingsViewModel_PropertyChangeFired,LogSettingsViewModel_StudioFileLogLevel,LogSettingsViewModel_Construct -UseRegionalSettings
+        &"$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Studio.Core.Tests -ExcludeCategories "Intellisense Textbox Visual Tree","Studio Settings Core",SettingsViewModel_SaveCommand,SettingsViewModel_IsDirty,LogSettingsViewModel_Constructor,SettingsViewModel_OnDeactivate,SettingsViewModel_ReturnsFalse,SettingsViewModel_DoDeactivate,LogSettingsViewModel_ServerLogLevel,LogSettingsViewModel_UpdateHelp,LogSettingsViewModel_SelectedLoggingType,LogSettingsViewModel_GetLogFileCommand,LogSettingsViewModel_PropertyChangeFired,LogSettingsViewModel_StudioFileLogLevel,LogSettingsViewModel_Construct,COMIPCSaxonCSandStudioTests -UseRegionalSettings
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3376,7 +3376,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -ExcludeProjects Dev2.Integration.Tests,Dev2.Studio.Core.Tests,Dev2.RunTime.Tests,Dev2.Infrastructure.Tests,Warewolf.UI.Tests,Warewolf.Logger.Tests,Warewolf.Studio.ViewModels.Tests,Warewolf.Web.UI.Tests,Warewolf.Storage.Tests,Warewolf.Auditing.Tests,Warewolf.UIBindingTests.Deploy,Warewolf.UIBindingTests.ComPluginSource -Category CannotParallelize -UseRegionalSettings
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -Category CannotParallelize -UseRegionalSettings
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3814,7 +3814,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -ExcludeCategories ResourcePermissionsSecurity,OverlappingUserGroupsPermissionsSecurity,ConflictingViewPermissionsSecurity,ConflictingExecutePermissionsSecurity,ConflictingContributeViewExecutePermissionsSecurity,ConflictingViewExecutePermissionsSecurity,NoConflictingPermissionsSecurity -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Warewolf.Security.Specs -ExcludeCategories ResourcePermissionsSecurity,OverlappingUserGroupsPermissionsSecurity,ConflictingViewPermissionsSecurity,ConflictingExecutePermissionsSecurity,ConflictingContributeViewExecutePermissionsSecurity,ConflictingViewExecutePermissionsSecurity,NoConflictingPermissionsSecurity,COMIPCSaxonCSandStudioTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
       displayName: 'Run Tests'
 
     - task: PublishBuildArtifacts@1
@@ -4012,6 +4012,39 @@ stages:
         testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
         failTaskOnFailedTests: true
         testRunTitle: 'No Conflicting Permissions Security Specs'
+        
+    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
+  
+  - job: COMIPC_SaxonCS_and_Studio_Tests
+    displayName: 'COMIPC SaxonCS and Studio Tests'
+  
+    steps:
+    - checkout: none
+    
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        buildType: 'current'
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)'
+  
+    - script: |
+        cd /d "$(Agent.BuildDirectory)"
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Specs,Warewolf.*.Specs,Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -Category COMIPCSaxonCSandStudioTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+      displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+        ArtifactName: 'COMIPC_SaxonCS_and_Studio_Tests_Server_Log_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
+        
+    - task: PublishTestResults@2
+      inputs:
+        testRunner: VSTest
+        testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
+        failTaskOnFailedTests: true
+        testRunTitle: 'COMIPC SaxonCS and Studio Tests'
         
     - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
 
