7459-Remove these tests from the build

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -4015,38 +4015,38 @@ stages:
         
     - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
   
-  - job: COMIPC_SaxonCS_and_Studio_Tests
-    displayName: 'COMIPC SaxonCS and Studio Tests'
-  
-    steps:
-    - checkout: none
-    
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        buildType: 'current'
-        artifactName: 'ServerBinaries'
-        targetPath: '$(Agent.BuildDirectory)'
-  
-    - script: |
-        cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Specs,Warewolf.*.Specs,Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -Category COMIPCSaxonCSandStudioTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
-      displayName: 'Run Tests'
-
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
-        ArtifactName: 'COMIPC_SaxonCS_and_Studio_Tests_Server_Log_File'
-        publishLocation: 'Container'
-        StoreAsTar: false
-        
-    - task: PublishTestResults@2
-      inputs:
-        testRunner: VSTest
-        testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
-        failTaskOnFailedTests: true
-        testRunTitle: 'COMIPC SaxonCS and Studio Tests'
-        
-    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
+#  - job: COMIPC_SaxonCS_and_Studio_Tests
+ #   displayName: 'COMIPC SaxonCS and Studio Tests'
+  #
+ #   steps:
+  #  - checkout: none
+ #   
+ #   - task: DownloadPipelineArtifact@2
+  #    inputs:
+  #      buildType: 'current'
+  #      artifactName: 'ServerBinaries'
+  #      targetPath: '$(Agent.BuildDirectory)'
+  #
+  #  - script: |
+  #      cd /d "$(Agent.BuildDirectory)"
+  #      powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Specs,Warewolf.*.Specs,Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -Category COMIPCSaxonCSandStudioTests -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+  #    displayName: 'Run Tests'
+#
+  #  - task: PublishBuildArtifacts@1
+  #    inputs:
+  #      PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
+  #      ArtifactName: 'COMIPC_SaxonCS_and_Studio_Tests_Server_Log_File'
+  #      publishLocation: 'Container'
+  #      StoreAsTar: false
+ #       
+  #  - task: PublishTestResults@2
+  #    inputs:
+  #      testRunner: VSTest
+  #      testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
+  #      failTaskOnFailedTests: true
+  #      testRunTitle: 'COMIPC SaxonCS and Studio Tests'
+  #      
+   # - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
 
 - stage: Compile_Release
   displayName: 'Compile Release'
