7463-investigating test failures in Dev2.Activities.Specs

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -15,7 +15,7 @@ stages:
     - task: PowerShell@2
       inputs:
         filePath: '$(Agent.BuildDirectory)/s/Compile.ps1'
-        arguments: '-ServerTests -StudioProject -MSBuildPath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" -TesthostConfig "Dev2.Runtime.Tests.dll.config"'
+        arguments: '-ServerTests -StudioProject -MSBuildPath "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\Bin\MSBuild.exe" -TesthostConfig "Dev2.Activities.Specs.dll.config"'
         displayName: 'Compile'
   
     - task: DeleteFiles@1
