--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -103,31 +103,31 @@ stages:
        
     - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
   
-  - job: Activities_Designers_Tests
-    displayName: 'Activities Designers Tests'
-
-    steps:
-    - checkout: none
-    
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        buildType: 'current'
-        artifactName: 'ServerBinaries'
-        targetPath: '$(Agent.BuildDirectory)'
-  
-    - script: |
-        cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Designers.Tests
-      displayName: 'Run Tests'
-  
-    - task: PublishTestResults@2
-      inputs:
-        testRunner: VSTest
-        testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
-        failTaskOnFailedTests: true
-        testRunTitle: 'Activities Designers Tests'
-       
-    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
+#  - job: Activities_Designers_Tests
+#    displayName: 'Activities Designers Tests'
+#
+#    steps:
+#    - checkout: none
+#    
+#    - task: DownloadPipelineArtifact@2
+#      inputs:
+#        buildType: 'current'
+#        artifactName: 'ServerBinaries'
+#        targetPath: '$(Agent.BuildDirectory)'
+#  
+#    - script: |
+#        cd /d "$(Agent.BuildDirectory)"
+#        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Designers.Tests
+#      displayName: 'Run Tests'
+#  
+#    - task: PublishTestResults@2
+#      inputs:
+#        testRunner: VSTest
+#        testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
+#        failTaskOnFailedTests: true
+#        testRunTitle: 'Activities Designers Tests'
+#       
+#    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
   
   - job: Scheduler_Admin_User_Unit_Tests
     displayName: 'Scheduler Admin User Unit Tests'
