7451-publish this trx file because this job is missing tests in the latest build

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3477,6 +3477,13 @@ stages:
         ArtifactName: 'RabbitMQ_Workflow_Execution_Specs_Server_Log_File'
         publishLocation: 'Container'
         StoreAsTar: false
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\*.trx'
+        ArtifactName: 'RabbitMQ_Workflow_Execution_Specs_TRX_File'
+        publishLocation: 'Container'
+        StoreAsTar: false
         
     - task: PublishTestResults@2
       inputs:
