7451-publish this folder

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -3473,15 +3473,8 @@ stages:
 
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\warewolf-server.log'
-        ArtifactName: 'RabbitMQ_Workflow_Execution_Specs_Server_Log_File'
-        publishLocation: 'Container'
-        StoreAsTar: false
-
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(Agent.BuildDirectory)\TestResults\*.trx'
-        ArtifactName: 'RabbitMQ_Workflow_Execution_Specs_TRX_File'
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults'
+        ArtifactName: 'RabbitMQ_Workflow_Execution_Specs_Test_Results'
         publishLocation: 'Container'
         StoreAsTar: false
         
