7451-isolate this unit test

--- a/Dev/.azure/pipeline.yml
+++ b/Dev/.azure/pipeline.yml
@@ -65,7 +65,7 @@ stages:
   
     - script: |
         cd /d "$(Agent.BuildDirectory)"
-        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -ExcludeProjects Dev2.Integration.Tests,Dev2.Studio.Core.Tests,Dev2.Infrastructure.Tests,Warewolf.UI.Tests,Warewolf.Logger.Tests,Warewolf.Studio.ViewModels.Tests,Warewolf.Web.UI.Tests,Warewolf.Storage.Tests,Warewolf.Auditing.Tests,Dev2.Activities.Tests,Dev2.Activities.Designers.Tests -ExcludeCategories CannotParallelize,ResourceCatalog_LoadTests,PluginRuntimeHandler,GatherSystemInformation,LocalSchedulerAdmin,Multithread,AnonymousRedis,COMIPCSaxonCSandStudioTests -UseRegionalSettings
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.*.Tests,Warewolf.*.Tests,Warewolf.UIBindingTests.* -ExcludeProjects Dev2.Integration.Tests,Dev2.Studio.Core.Tests,Dev2.Infrastructure.Tests,Warewolf.UI.Tests,Warewolf.Logger.Tests,Warewolf.Studio.ViewModels.Tests,Warewolf.Web.UI.Tests,Warewolf.Storage.Tests,Warewolf.Auditing.Tests,Dev2.Activities.Tests,Dev2.Activities.Designers.Tests -ExcludeCategories CannotParallelize,ResourceCatalog_LoadTests,PluginRuntimeHandler,GatherSystemInformation,LocalSchedulerAdmin,Multithread,AnonymousRedis,COMIPCSaxonCSandStudioTests,WFWithRabbitMqConsumeTimeout5 -UseRegionalSettings
       displayName: 'Run Tests'
   
     - task: PublishTestResults@2
@@ -3484,6 +3484,39 @@ stages:
         testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
         failTaskOnFailedTests: true
         testRunTitle: 'RabbitMQ Workflow Execution Specs'
+        
+    - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
+  
+  - job: WFWithRabbitMqConsumeTimeout5
+    displayName: 'WFWithRabbitMqConsumeTimeout5'
+  
+    steps:
+    - checkout: none
+    
+    - task: DownloadPipelineArtifact@2
+      inputs:
+        buildType: 'current'
+        artifactName: 'ServerBinaries'
+        targetPath: '$(Agent.BuildDirectory)'
+  
+    - script: |
+        cd /d "$(Agent.BuildDirectory)"
+        powershell -NoProfile -NoLogo -ExecutionPolicy Bypass -NoExit -File "$(Agent.BuildDirectory)\Job Shortcuts\TestRun.ps1" -RetryCount 6 -Projects Dev2.Activities.Specs -Category WFWithRabbitMqConsumeTimeout5 -PreTestRunScript "StartAsService.ps1 -Cleanup -ResourcesPath ServerTests" -PostTestRunScript ReverseDeployLog.ps1
+      displayName: 'Run Tests'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Agent.BuildDirectory)\TestResults'
+        ArtifactName: 'WFWithRabbitMqConsumeTimeout5_Test_Results'
+        publishLocation: 'Container'
+        StoreAsTar: false
+        
+    - task: PublishTestResults@2
+      inputs:
+        testRunner: VSTest
+        testResultsFiles: '$(Agent.BuildDirectory)\TestResults\*.trx'
+        failTaskOnFailedTests: true
+        testRunTitle: 'WFWithRabbitMqConsumeTimeout5'
         
     - script: 'if not exist "$(Agent.BuildDirectory)\TestResults\*.trx" exit 1'
   
