--- a/Dev/Dev2.Activities.Specs/Dev2.Activities.Specs.csproj
+++ b/Dev/Dev2.Activities.Specs/Dev2.Activities.Specs.csproj
@@ -264,7 +264,7 @@
       <Version>3.9.74</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite.Core">
-      <Version>1.0.117</Version>
+      <Version>1.0.118</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Extensions">
       <Version>4.5.4</Version>
@@ -543,8 +543,8 @@
   </ItemGroup>
   <PropertyGroup>
     <PostBuildEvent>
-      if exist "$(SolutionDir)Dev\Dev2.Activities.Specs\bin\Debug\net6.0-windows\win\Dev2.Activities.Specs.dll" (
-        echo D | xcopy /Y /E /F /D "$(SolutionDir)Server Tests Setup\SQLite.Interop.dll" "$(SolutionDir)Dev\Dev2.Activities.Specs\bin\Debug\net6.0-windows\win"
+      if exist "$(SolutionDir)Dev2.Activities.Specs\bin\Debug\net6.0-windows\win\Dev2.Activities.Specs.dll" and not exist "$(SolutionDir)Dev2.Activities.Specs\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
+        echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Dev2.Activities.Specs\bin\Debug\net6.0-windows\win"
       )
     </PostBuildEvent>
   </PropertyGroup>
