--- a/Dev/Dev2.Runtime.Tests/Dev2.Runtime.Tests.csproj
+++ b/Dev/Dev2.Runtime.Tests/Dev2.Runtime.Tests.csproj
@@ -661,7 +661,7 @@
     <PackageReference Include="Prism.Core" Version="8.1.97" />
 
     <PackageReference Include="System.Data.SQLite.Core">
-      <Version>1.0.117</Version>
+      <Version>1.0.118</Version>
       <PrivateAssets>none</PrivateAssets>
     </PackageReference>
     <PackageReference Include="TaskSchedulerEditor">
@@ -726,9 +726,9 @@
     <PostBuildEvent>
 		taskkill /f /im Warewolf.COMIPC.exe /fi "STATUS eq RUNNING"
 		taskkill /f /im Warewolf.COMIPC.vshost.exe /fi "STATUS eq RUNNING"
-		if exist "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\Dev2.Runtime.Tests.dll" (
+		if exist "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\Dev2.Runtime.Tests.dll" and not exist "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\SQLite.Interop.dll" (
 		echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win\Warewolf.COMIPC.exe_v4.8"
-		echo D | xcopy /Y /E /F /D "$(SolutionDir)Server Tests Setup\SQLite.Interop.dll" "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win"
+		echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Dev2.Runtime.Tests\bin\Debug\net6.0-windows\win"
 		)
 	</PostBuildEvent>
   </PropertyGroup>
