--- a/Dev/Warewolf.COMIPC.Tests/Warewolf.COMIPC.Tests.csproj
+++ b/Dev/Warewolf.COMIPC.Tests/Warewolf.COMIPC.Tests.csproj
@@ -63,18 +63,20 @@
   <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.4.1" />
   <PackageReference Include="Moq" Version="4.18.2" />
   <PackageReference Include="MSTest.TestFramework" Version="3.0.2" />
-  <PackageReference Include="System.Data.SQLite.Core" Version="1.0.117" />
+  <PackageReference Include="System.Data.SQLite.Core" Version="1.0.118" />
   <PackageReference Include="MSTest.TestAdapter" Version="3.0.2" />
   </ItemGroup>
   <PropertyGroup>
     <PostBuildEvent>
-		taskkill /f /im Warewolf.COMIPC.exe /fi "STATUS eq RUNNING"
-		taskkill /f /im Warewolf.COMIPC.vshost.exe /fi "STATUS eq RUNNING"
-		if exist "$(SolutionDir)Warewolf.COMIPC.Tests\bin\Debug\net6.0-windows\win-x86\Warewolf.COMIPC.Tests.dll" (
-		echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Warewolf.COMIPC.Tests\bin\Debug\net6.0-windows\win-x86\Warewolf.COMIPC.exe_v4.8"
-		echo D | xcopy /Y /E /F /D "$(SolutionDir)Server Tests Setup\SQLite.Interop.dll" "$(SolutionDir)Dev\Warewolf.COMIPC.Tests\bin\Debug\net6.0-windows\win-x86"
-		)
-	</PostBuildEvent>
+        taskkill /f /im Warewolf.COMIPC.exe /fi "STATUS eq RUNNING"
+        taskkill /f /im Warewolf.COMIPC.vshost.exe /fi "STATUS eq RUNNING"
+        if exist "$(SolutionDir)Warewolf.COMIPC.Tests\bin\Debug\net6.0-windows\win-x86\Warewolf.COMIPC.Tests.dll" (
+        echo D | xcopy /Y /E /F /D "$(SolutionDir)Binaries\Warewolf.COMIPC.exe_v4.8" "$(SolutionDir)Warewolf.COMIPC.Tests\bin\Debug\net6.0-windows\win-x86\Warewolf.COMIPC.exe_v4.8"
+        if not exist "$(SolutionDir)Warewolf.COMIPC.Tests\bin\Debug\net6.0-windows\win-x86\SQLite.Interop.dll" (
+            echo D | xcopy /Y /E /F /D "$(SolutionDir)Dev2.Server\bin\Debug\net6.0-windows\runtimes\win-x64\native\SQLite.Interop.dll" "$(SolutionDir)Warewolf.COMIPC.Tests\bin\Debug\net6.0-windows\win-x86"
+            )
+        )
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
